--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,4 @@
 
-
-
-
-/* ===================== TABLE OF CONTENT =======================
-
-
-1.  5 DIFFERENT HOMEPAGES
-2.  RESET CSS
-3.  CROSS BROWSER COMPATABILITY
-4.  SEARCH
-5.  DROPDOWN MENU
-6.  RESPONSIVE HEADER
-7.  SLICK SLIDER 
-8.  HTML5LIGHTBOX VIDEO PLUGIN
-9.  POST DETAILS PAGE
-12. FONT AWESOME FONTS
-12. LINE AWESOME FONTS
-
-
-================================================================= */
-
-/* ================================================================================== 
-									Fonts
-===================================================================================== */
-
 @import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i|Playfair+Display:400,400i,700,700i,900,900i');
 
 /* ================================================================================== 
@@ -265,6 +240,30 @@ header {
 	color: #181819;
 }
 
+/*==============================================================
+## Header Type CSS
+================================================================*/
+/*## Header Images*/
+.header-image {
+    padding: 30px 0 0 0;
+    position: relative;
+}
+
+.header-image .container {
+    position: relative;
+    z-index: 2;
+}
+
+.header-image:before {
+    position: absolute;
+    content: "";
+    background-color: rgba(0, 0, 0, 0.2);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
 
 
 
