--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1219,7 +1219,10 @@ header {
 .ft-style .post-title a {
 	color: #ffffff;
 }
-
+.footer .sec-title h3 {
+    background: #151618;
+    color: #fff;
+}
 /* =================== FOOTER CONTENT ====================== */
 
 
