--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -81,7 +81,8 @@
 	.has-post-thumbnail .blog-items.main .blog-item.main-style .blog-info {
 		bottom: 20px;
 	}
-	.feat-stors .blog-item, .ft-style .blog-item {
+	.feat-stors .blog-item, 
+	.ft-style .blog-item {
 		margin-bottom: 40px;
 	}
 
@@ -173,6 +174,9 @@
 	}
 
 	.blog-items.main .blog-item.main-style .blog-info {
+		padding: 0;
+	}
+	.has-post-thumbnail .blog-items.main .blog-item.main-style .blog-info {
 		padding: 0 20px;
 	}
 
@@ -285,7 +289,7 @@
 	}
 
 	.blog-items.main .blog-item.main-style .post-title {
-		padding: 15px 15px 17px;
+		padding: 15px 0;
 		font-size: 16px;
 		line-height: 23px;
 	}
