--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,7 +373,7 @@ header {
 	width: 512px;
 	padding: 26px 30px 28px;
 	margin-bottom: 24px;
-	border:1px solid #4a4a45;
+	border:1px solid #7a7a7a;
 	font-size: 23px;
 	line-height: 32px;
 }
